# infinity-service-ops

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: main.rs
apps/connector-host/: Cargo.toml
apps/connector-host/src/: main.rs
apps/control-plane/: Cargo.toml
apps/control-plane/src/: main.rs
apps/event-relay/: Cargo.toml
apps/event-relay/src/: main.rs
apps/frontend/: app.js  index.html  styles.css
apps/migrator/: Cargo.toml
apps/migrator/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/ai-orchestrator/: Cargo.toml
crates/ai-orchestrator/src/: lib.rs
crates/audit-core/: Cargo.toml
crates/audit-core/src/: lib.rs
crates/automation-library/: Cargo.toml
crates/automation-library/src/: lib.rs
crates/cmdb-domain/: Cargo.toml
crates/cmdb-domain/src/: lib.rs
crates/event-core/: Cargo.toml
crates/event-core/src/: lib.rs
crates/integration-core/: Cargo.toml
crates/integration-core/src/: lib.rs
crates/itom-domain/: Cargo.toml
crates/itom-domain/src/: lib.rs
crates/persistence-core/: Cargo.toml
crates/persistence-core/src/: lib.rs
crates/platform-core/: Cargo.toml
crates/platform-core/src/: lib.rs
crates/platform-domain/: Cargo.toml
crates/platform-domain/src/: api.rs  audit.rs  changes.rs  database.rs  identity.rs  incidents.rs  knowledge.rs  lib.rs  module_map.rs  policy_hooks.rs  primitives.rs  problems.rs  service_catalog.rs  service_requests.rs  sovereignty.rs  tenancy.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/search-knowledge/: Cargo.toml
crates/search-knowledge/src/: lib.rs
crates/secops-domain/: Cargo.toml
crates/secops-domain/src/: lib.rs
crates/security-foundation/: Cargo.toml
crates/security-foundation/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
docs/showcase/: index.html
